Endpoint to save result is added. Swagger is updated. Unused models is removed
