# backend/src/routes/quiz.ts
@@ -1,10 +1,14 @@
 import Router from "express";
+import { Model } from "sequelize";
 import { QuizField } from "../models/quiz";
 import { IUser, UserField } from "../models/user";
 import { QuestionField } from "../models/question";
+import { QuizUserField } from "../models/quiz-user";
 import { QuizRepository } from "../repositories/quiz";
 import { UserRepository } from "../repositories/user";
-import { Question } from "../types";
+import { ResultRepository } from "../repositories/result";
+import { UserQuizRepository } from "../repositories/user-quiz";
+import { Question, QuestionDB, Quiz } from "../types";
 import { clearAnswersInQuiz } from "../utils/removeAnswersFromQuiz";
 import { isModerator } from "../middleware/is-moderator";
 
@@ -12,6 +16,8 @@ const router = Router();
 
 const quizRepository = new QuizRepository();
 const userRepository = new UserRepository();
+const resultRepository = new ResultRepository();
+const userQuizRepository = new UserQuizRepository();
 
 router.get("/quizzes", async (req, res) => {
   try {
@@ -84,6 +90,68 @@ router.delete("/quizzes/delete/:id/", isModerator, async (req, res) => {
       res.sendStatus(200);
     } else {
       res.status(400).send(`No quiz with id: ${id}`);
+    }
+  } catch (error) {
+    res.status(500).send(error);
+  }
+});
+
+router.post("/quizzes/result/send", async (req, res) => {
+  try {
+    const { uid: quizId, questions } = req.body as Quiz;
+    const { user } = req || {};
+
+    const userId = (user as IUser)?.[UserField.Uid];
+
+    const foundedUser = await userRepository.findByPk(userId);
+    const foundedQuiz = await quizRepository.findByPk(quizId);
+
+    if (foundedUser && foundedQuiz) {
+      // GET or INSERT the association in quiz-users table
+      const quizUserIds =
+        (await userQuizRepository.getOne({
+          [QuizUserField.UserId]: userId,
+          [QuizUserField.QuizId]: quizId,
+        })) || (await (foundedQuiz as any)?.addUser(foundedUser))[0];
+
+      const quiz = foundedQuiz.toJSON() as Quiz<QuestionDB>;
+
+      const score = questions.reduce((acc, userQuestion) => {
+        const [question] = quiz.questions
+          .map((item) => (item as unknown as Model<QuestionDB>)?.toJSON())
+          .filter(
+            (item) => item.uid === userQuestion.uid
+          ) as unknown as Question[];
+
+        const rightAnswers = question.rightAnswers || [];
+        const userAnswers = userQuestion?.rightAnswers || [];
+
+        if (
+          rightAnswers.length === 1 &&
+          userAnswers.length === 1 &&
+          userAnswers[0] === rightAnswers[0]
+        ) {
+          return acc + 1;
+        }
+
+        if (rightAnswers.length > 1) {
+          const joint = userAnswers.filter((answer) =>
+            rightAnswers.includes(answer)
+          );
+          return acc + joint.length / rightAnswers.length;
+        }
+
+        return acc;
+      }, 0);
+
+      resultRepository.create({
+        score: `${(score / quiz.questions.length) * 100}%`,
+        quizUserId: quizUserIds.toJSON().uid,
+      });
+
+      res
+        .status(200)
+        .send({ score: `${(score / quiz.questions.length) * 100}%` });
     }
   } catch (error) {
     res.status(500).send(error);
